[package]
name = "libopencm3_sys"
version = "0.0.1"
authors = ["libopencm3 Developers", "Olivier <olivier@librepush.net>"]
# The licence of the project; inherits libopencm3's licence.
license = "LGPL-3"

build = "build.rs"

description = "Rust bindings to the libopencm3 library for Cortex-M microcontrollers. Currently STM32F1 only -- forks and contributions accepted to alleviate this."

homepage = "https://gitlab.com/reivilibre/libopencm3_sys"
repository = "https://gitlab.com/reivilibre/libopencm3_sys"

[dependencies]


[build-dependencies]
bindgen = "0.37.4"
cc = "1.0"
